--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.1",
+    "@mui/icons-material": "^5.13.7",
     "formik": "^2.4.2",
     "next": "13.4.8",
     "react": "18.2.0",
