--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.14.1",
     "@mui/icons-material": "^5.13.7",
+    "@mui/lab": "^5.0.0-alpha.147",
+    "@mui/material": "^5.14.1",
+    "@mui/x-date-pickers": "^6.16.1",
+    "date-fns": "^2.30.0",
+    "dayjs": "^1.11.10",
     "formik": "^2.4.2",
     "next": "13.4.8",
     "react": "18.2.0",
